added feature section

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,4 +2,25 @@
   background-color: $color-gray-light-1;
   padding: 25rem 0;
   margin-top: -20vh;
+  height: 100rem;
+}
+
+.section-features {
+  padding: 20rem;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8)
+    ),
+    url("../img/nat-4.jpg");
+  background-size: cover;
+  height: 658px;
+
+  // Skew the entire section
+  transform: skewY(-7deg);
+  margin-top: -11rem;
+
+  & > * {
+    transform: skewY(7deg);
+  }
 }
