added tour section

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,6 +4,13 @@ $color-primary-dark: #28b485;
 $color-gray-dark: #777;
 $color-white: #fff;
 $color-black: #000000;
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5643fa;
+
+$color-shadow: rgba($color-black, 0.15);
 
 // Font sizes
 $default-font-size: 1.6rem;
@@ -15,3 +22,6 @@ $gutter-horizontal: 6rem;
 
 // Home page
 $color-gray-light-1: #f7f7f7;
+$color-gray-light-2: #eee;
+
+// CARD
