--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -24,3 +24,9 @@
     transform: skewY(7deg);
   }
 }
+
+.section-tours {
+  padding: 25rem 0 50rem;
+  background-color: $color-gray-light-1;
+  margin-top: -10rem;
+}
