--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -40,10 +40,10 @@
 
   &--green {
     background-color: $color-primary;
-    color: $color-gray-dark;
+    color: $color-white;
 
     &::after {
-      background-color: $color-white;
+      background-color: $color-primary;
     }
   }
 
