--- a/sass/base/_utility.scss
+++ b/sass/base/_utility.scss
@@ -1,5 +1,5 @@
 .u-center-text {
-  text-align: center;
+  text-align: center !important;
 }
 
 .u-margin-small {
@@ -7,9 +7,13 @@
 }
 
 .u-margin-medium {
-  margin-bottom: 4rem;
+  margin-bottom: 4rem !important;
 }
 
 .u-margin-big {
-  margin-bottom: 8rem;
+  margin-bottom: 8rem !important;
+}
+
+.u-margin-top-big {
+  margin-top: 57rem !important;
 }
