--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,5 +1,6 @@
 /* dicover button */
 .btn {
+  &,
   &:link,
   &:visited {
     /* :link and :visited are sudo class*/
@@ -12,6 +13,10 @@
     transition: all 0.2s;
     position: relative;
     font-size: $default-font-size;
+
+    //changes for button element
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -24,7 +29,9 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-1px);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
