--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,6 +2,8 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 $color-gray-dark: #777;
+$color-gray-dark-2: #999;
+
 $color-white: #fff;
 $color-black: #000000;
 $color-secondary-light: #ffb900;
