--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,8 @@
 @import "components/composition";
 @import "components/feature-box";
 @import "components/popup";
+@import "components/bg-video";
+@import "components/form";
 @import "components/card";
 @import "components/story";
 @import "layout/header";
