--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 $color-gray-dark: #777;
 $color-gray-dark-2: #999;
+$color-gray-dark-3: #333;
 
 $color-white: #fff;
 $color-black: #000000;
